#1, fix set-output, rename flowsquad to miragon

--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: "Docker Cloud Build"
 description: "Builds a docker image using Google Cloud Build and pushes it to Google Container Registry."
-author: "Alexander Praschek <alexander.praschek@flowsquad.io>"
+author: "Alexander Praschek <alexander.praschek@miragon.io>"
 inputs:
   gcp-project-id:
     required: true
