--- a/action.yml
+++ b/action.yml
@@ -12,7 +12,6 @@ inputs:
       Base64-encoded key file to use to authenticate against Google Cloud Services.
   gcp-cloud-storage-bucket:
     required: false
-    default: "${gcp-project-id}_cloudbuild"
     description: >-
       The Cloud Storage bucket to use to temporarily store the Cloud Build input files. 
       
@@ -21,20 +20,17 @@ inputs:
       You have to create the specified bucket first manually.
   gcp-registry-use-gcr:
     required: false
-    default: "false"
     description: >-
-      Enables support for former Google Container Registry repositories migrated to Google Artifact Registry.
+      Enables support for former Google Container Registry repositories migrated to Google Artifact Registry. Defaults to false.
   gcp-registry-host:
     required: false
-    default: europe.pkg.dev
     description: >-
-      The host to use for Google Artifact Registry. 
+      The host to use for Google Artifact Registry. Defaults to europe.pkg.dev.
       
       Find all supported values in the GCP documentation (https://cloud.google.com/artifact-registry/docs/repositories/repo-locations). 
       If you want to use a former GCR repository, this value must be set to one of the GCR endpoints (e.g. `eu.gcr.io`).
   gcp-registry-repository:
     required: false
-    default: "${gcp-project-id}"
     description: >-
       **Required unless you use GCR.** 
       The repository to use for Google Artifact Registry. 
@@ -72,19 +68,16 @@ inputs:
       $SS         The second in 2-digit-format
   image-tag-latest:
     required: false
-    default: "false"
     description: >-
-      Whether the built image will be tagged with latest.
+      Whether the built image will be tagged with latest. Defaults to false.
   image-tag-branch-latest:
     required: false
-    default: "false"
     description: >-
-      Whether the built image will be tagged with ${branchName}-latest.
+      Whether the built image will be tagged with ${branchName}-latest. Defaults to false.
   image-tag-additional-tags:
     required: false
-    default: "false"
     description: >-
-      A comma-separated list of additional tags to use for the built image.
+      A comma-separated list of additional tags to use for the built image. Defaults to false.
 outputs:
   full-image-name:
     description: >-
