--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
     "compilerOptions": {
-        "lib": ["ES2023"],
+        "lib": ["es2019", "es2020.bigint", "es2020.string", "es2020.symbol.wellknown"],
         "module": "commonjs",
         "moduleResolution": "Node",
-        "target": "ES2023",
+        "target": "es2019",
         "outDir": "./dist",
         "rootDir": "./src",
         "strict": true,
