--- a/package.json
+++ b/package.json
@@ -33,18 +33,20 @@
     "uuid": "^11.0.5"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.5",
     "@octokit/types": "^13.7.0",
+    "@stylistic/eslint-plugin": "^3.0.0",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^22.12.0",
     "@types/rimraf": "^4.0.5",
     "@types/tar": "^6.1.13",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.1.0",
-    "@typescript-eslint/parser": "^6.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.22.0",
+    "@typescript-eslint/parser": "^8.22.0",
     "@vercel/ncc": "^0.36.1",
-    "eslint": "^8.45.0",
-    "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint": "^9.19.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-plugin-import": "^2.31.0",
     "rimraf": "^6.0.1",
     "typescript": "^5.1.6"
   },
