--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "lib": ["es2019", "es2020.bigint", "es2020.string", "es2020.symbol.wellknown"],
         "module": "commonjs",
         "moduleResolution": "Node",
-        "target": "es2019",
+        "target": "ES2023",
         "outDir": "./dist",
         "rootDir": "./src",
         "strict": true,
