--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "lib": ["es2019", "es2020.bigint", "es2020.string", "es2020.symbol.wellknown"],
-        "module": "ESNext",
+        "lib": ["ES2023"],
+        "module": "commonjs",
         "moduleResolution": "Node",
         "target": "ES2023",
         "outDir": "./dist",
