--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "lib": ["ES2023"],
-        "module": "commonjs",
+        "module": "ESNext",
         "moduleResolution": "Node",
         "target": "ES2023",
         "outDir": "./dist",
